<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddRecipeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_add_recipe"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <TextView
            android:id="@+id/recipe_name_heading_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_bottom_margin"
            android:gravity="center|start"
            android:text="@string/heading_recipe_name"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_bottom_margin"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_recipe_name"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:maxLength="35"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColorLink="@color/colorText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_bottom_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_heading_ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:gravity="center|start"
                android:text="@string/heading_ingredients"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/button_add_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:src="@drawable/ic_add_pink_24dp"
                style="?android:attr/borderlessButtonStyle" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingredients_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_bottom_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_bottom_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/instructions_heading_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:gravity="center|start"
                android:text="@string/heading_instructions"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/button_add_instructions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:src="@drawable/ic_add_pink_24dp"
                style="?android:attr/borderlessButtonStyle" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/instructions_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_bottom_margin" />

        <TextView
            android:id="@+id/text_view_total_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_bottom_margin"
            android:gravity="center|start"
            android:text="@string/heading_total_instructions"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_total_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_bottom_margin"
            android:gravity="center|start"
            android:text="@string/heading_total_time"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>